bug 423539. Enormous amount of 'morkObject not thread-safe' assertions when importing mail. r=Standard8, sr=Neil